011zookeeper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeper
  namespace: kafka
spec:
  clusterIP: None
  selector:
    app: zookeeper
  ports:
  - port: 32181
    targetPort: 32181
