100schema-registry.yml
---
apiVersion: v1
kind: Service
metadata:
  name: schema
  namespace: cp-quickstart
spec:
  ports:
  - port: 8081
  clusterIP: None
  selector:
    app: schema-registry
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: registry
  namespace: cp-quickstart
spec:
  serviceName: "schema"
  replicas: 1
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: schema-registry
        image: confluentinc/cp-schema-registry:3.2.0@sha256:ae0a2021a7ac52bdb98dd760850a50d72747a62612f257be92b0698654bac70d
        ports:
        - containerPort: 8081
