150rest-proxy.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rest
  namespace: cp-quickstart
spec:
  ports:
  - port: 8082
  selector:
    app: kafka-rest
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rest
  namespace: cp-quickstart
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-rest
    spec:
      containers:
      - name: kafka-rest
        image: confluentinc/cp-kafka-rest:3.2.0@sha256:82206b1609d84e30279688ed036b034c503feb35543637d930f3d95136296245
        ports:
        - containerPort: 8082
